<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:title="@string/provide_information"
        app:titleTextColor="@color/white"
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_margin="10dp"
                android:hint="@string/enter_message">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/postMessage"
                    android:inputType="textMultiLine"
                    android:maxLength="500" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select Priority : "
                    android:layout_gravity="center_vertical"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rgPriority"
                    android:orientation="horizontal"
                    android:layout_margin="10dp"
                    android:gravity="center_horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="High"
                        android:id="@+id/rbPriorityHigh" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Low"
                        android:id="@+id/rbPriorityLow"
                        android:checked="true" />

                </RadioGroup>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":Target Audience:"
                    android:layout_centerHorizontal="true"
                    style="@style/TextAppearance.AppCompat.SearchResult.Title"
                    android:id="@+id/infoText" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rgLocationFilter"
                    android:orientation="horizontal"
                    android:layout_margin="10dp"
                    android:gravity="center_horizontal"
                    android:layout_below="@id/infoText">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pin code"
                        android:id="@+id/rbPincode"
                        android:checked="true" />


                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="District"
                        android:id="@+id/rbDistrict" />


                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="State"
                        android:id="@+id/rbState" />


                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/locationLayoutByPincode"
                    android:layout_below="@id/rgLocationFilter"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="100">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_margin="10dp"
                            android:layout_weight="80"
                            android:hint="@string/enter_pincode">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/pinCode"
                                android:inputType="numberDecimal"
                                android:maxLength="6" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.button.MaterialButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:iconSize="35dp"
                            android:text="Add"
                            android:layout_gravity="center"
                            android:id="@+id/btnAddPincode"
                            app:icon="@drawable/ic_add_black" />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/locationLayoutByPincode"
                        android:id="@+id/rvPincodes"
                        android:padding="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/locationLayoutByDistrictAndState"
                    android:contentDescription="District/State Selector view"
                    android:visibility="gone"
                    android:layout_below="@id/rgLocationFilter">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_margin="10dp"
                        android:layout_weight="80"
                        android:hint="@string/enter_state">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/state" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_margin="10dp"
                        android:layout_weight="80"
                        android:hint="@string/enter_district">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/district" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>


            </RelativeLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rvAttachment"
                android:orientation="horizontal"
                android:padding="10dp"
                tools:itemCount="2" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add attachment"
                android:id="@+id/btnAddAttachment"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:id="@+id/btnSubmit"
        android:layout_gravity="center_horizontal" />

</LinearLayout>